--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,9 @@
+
 <DOCTYPE>
 <html>
 <head>
 <title>Index Page</title>
+<link ref="stylesheet" uri="style/nav.css/>
 </head>
 <body>
 <h1> Hahahahaha...... </h1>
